Fix font sizes to align better with UX

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 
 label {
   margin-bottom: 2px;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 input[type="text"], input[type="email"] {
